src/assets/styles/components/buttons.scss
@import "~assets/styles/base.scss";

.btn {
    border-radius: 0.25rem;
    background: transparent;
    color: #003366;
    font-weight: 400;
    transition: all linear 0.2s;

    &.inverted {
        color: #fff;
        border: 2px solid #fff;
        background: transparent;
        text-transform: uppercase;
        font-weight: 700;

        &:active,
        &:focus,
        &:hover {
            border-color: $gold;
            background: darken($gold, 8%);
            text-transform: uppercase;
            font-weight: 700;
        }
    }

    i {
        vertical-align: middle;

        + span {
            vertical-align: middle;
        }

    }

    &.btn-default {
        background: #EEE;
        color: #1a5a96;
    }

    &:disabled {
        pointer-events: none;
    }
}

.btn-inverted {
    background: darken($gold, 5%);
    text-transform: uppercase;
    font-size: 0.9375rem;
    font-weight: 700;
}

// Main Button
main {
    .btn-default {
        padding: 0.5rem;
    }
}


// Slide Buttons
.slide-r-btn,
.slide-l-btn {
    padding: 0.5rem;
    border-radius: 0.2rem;
    transition: all ease-out 0.2s;

    i, span {
        transition: all ease-out 0.2s;
    }

    i {
        opacity: 0;
    }

    span {
        display: inline-block;
    }

    &:hover,
    &:focus {
        text-decoration: none;

        i, span {
            opacity: 1;
            transform: translateX(0);
        }
    }
}

.slide-r-btn {
    i {
        margin-left: 0.25rem;
        transform: translateX(20px);
    }

    span {
        margin-left: 0.25rem;
        transform: translateX(12px);
    }
}

.slide-l-btn {
    i {
        margin-right: 0.25rem;
        transform: translateX(-20px);
    }

    span {
        margin-right: 0.25rem;
        transform: translateX(-12px);
    }
}

@media (max-device-width: 1024px) {
    .slide-r-btn,
    .slide-l-btn {
        i, span {
            transform: translateX(0);
        }

        i {
            opacity: 1;
        }
    }
}

// Content Buttons
.content-btns {
    margin-top: 3rem;
}

.content-btn {
    padding: 0.5rem;
    background: #EEE;
    color: #1a5a96;
    font-size: 0.875rem;
    font-weight: 600;
    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),
                0 1px 5px 0 rgba(0,0,0,0.12),
                0 3px 1px -2px rgba(0,0,0,0.2);
    &:focus,
    &:hover {
        border-color: $gold;
        background: $gold;
    }

    &:not([href]):not([tabindex]) {
        color: #1a5a96;
    }
}

.content-btn-alt {
    padding: 0.6rem 1rem;
    color: #5091cd;
    border: 2px solid #5091cd;
    background: transparent;
    text-transform: uppercase;
    font-size: 0.85rem;
    font-weight: 700;

    &:focus,
    &:hover {
        color: #fff;
        border-color: #5091cd;
        background: #5091cd;
    }
}

// Scroll Top Button
.scroll-top-btn {
    position: fixed;
    bottom: 1rem;
    right: 1rem;
    padding: 0.5rem;
    opacity: 0;
    border-color: $gold;
    background: $gold;
    transform: translateY(1rem);
    transition: all ease-out 0.2s;

    &.visible {
        opacity: 1;
        transform: translateY(0);
    }
}

// Submit Button
.submit-btn {
    border-color: $gold;
    background: $gold;
    font-size: 0.9375rem;
    font-weight: 700;
}

